editor-components/coming-soon/coming-soon3/coming-soon3.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;
@keyframes slide-in {
  from {
    opacity: 0;
    transform: translateY(50px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.container {
  height: 100vh;

  .max-content {
    height: 100%;
    .content {
      display: flex;
      flex-direction: column;
      gap: var(--composer-gap-md);
      height: 100%;
      justify-content: center;
      align-items: center;
      width: 100%;
      gap: var(--composer-gap-xl);
      .counter-container{
        display: flex;
        gap: var(--composer-gap-lg);
        .counter{
            display: flex;
            flex-direction: column;
            gap: var(--composer-gap-lg);
            align-items: center;
            .count{
                color: var(--composer-font-color-primary);
                margin: 0px; 
                font-size: 5rem;
            }
            .text{
                color: var(--composer-font-color-primary);
            }
        }
      }
      .bottom{
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: var(--composer-gap-md);
        .title-wrapper {
          position: relative;
          padding: 0px var(--composer-gap-sm);
          width: 75%;
          justify-content: center;
          display: flex;
  
          &.title-wrapper-animation {
            opacity: 0;
            animation: slide-in 1s ease-out 1s forwards;
          }
          .title {
            justify-content: center;
            display: flex;
            position: relative;
            min-width: 500px;
            width: 70%;
            .title-text {
              font-size: 8rem;
              color: var(--composer-font-color-primary);
            }
            .error-message {
              position: absolute;
              padding: var(--composer-gap-xs);
              left: 0px;
              bottom: var(--composer-gap-xl);
              width: fit-content;
              background-color: var(--composer-primary-color);
              border-radius: var(--composer-border-radius-md);
              .text {
                color: var(--composer-font-color-secondary);
                font-size: 1.5rem;
              }
            }
          }
          .line-right,
          .line-left {
            position: absolute;
            background-color: var(--composer-font-color-primary);
            height: 2px;
            width: 150px;
          }
          .line-right {
            bottom: 0px;
            right: 0px;
          }
          .line-left {
            top: 0px;
            left: 0px;
          }
        }
  
        .description {
          font-size: 2rem;
          color: var(--composer-font-color-primary);
          width: 50%;
  
          &.description-animation {
            opacity: 0;
            animation: slide-in 1s ease-out 1.3s forwards;
          }
        }
  
        .button {
          content: "";
  
          &.button-animation {
            opacity: 0;
            animation: slide-in 1s ease-out 1.6s forwards;
          }
        }
      }
    }
  }
}
@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      .content {
        .bottom{
          .title-wrapper {
            width: 100%;
            .title {
              min-width: 200px;
              .title-text {
                font-size: 7rem;
              }
            }
            .line-right,
            .line-left {
              width: 100px;
            }
          }
          .description {
            width: 65%;
            font-size: 1.5rem;
          }
        }        
      }
    }
  }
}
@container (max-width: #{$composer-phone-width}) {
  .container {
    .max-content {
      .content {
        gap: var(--composer-gap-lg);
        .counter-container{
          gap: var(--composer-gap-md);
            .counter{
                gap: var(--composer-gap-md);
                .count{
                  font-size: 3.5rem;
                }
            }
        }
        .bottom{
          .title-wrapper {
            .title {
              width: 80%;
              .title-text {
                font-size: 5.5rem;
              }
            }
          }
          .description {
            width: 70%;
            font-size: 1.5rem;
          }
        }
      }
    }
  }
}

