fix: count section min width and when counter is zero after chaing visible no need refresh

--- a/editor-components/coming-soon/coming-soon3/coming-soon3.module.scss
+++ b/editor-components/coming-soon/coming-soon3/coming-soon3.module.scss
@@ -32,6 +32,7 @@
             flex-direction: column;
             gap: var(--composer-gap-lg);
             align-items: center;
+            min-width: 55px;
             .count{
                 color: var(--composer-font-color-primary);
                 margin: 0px; 
